--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,12 @@
 body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377BA8; text-decoration: none; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h2              { font-size: 1.2em; }
+a, h1, h2, h3   { color: #377BA8; text-decoration: none; }
+h1, h2, h3      { font-family: 'Georgia', serif; margin: 0; }
+h2, h3          { font-size: 1.2em; }
 th              { background-color: #eee; border: 1px solid #ccc;}
-th, td    { padding: 0.2em; margin: 0.2em; }
+th, td          { padding: 0.2em; margin: 0.2em; }
 textarea        { width: 600px; height: 300px; }
+pre             { border: 1px solid #ccc; padding: 0.2em; }
+
 
 .page           { margin: 2em 8em; width: auto; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
