--- a/templates/show_account.html
+++ b/templates/show_account.html
@@ -2,14 +2,18 @@
 {% block body %}
   {% if account %}
     <dl>
-      <dt><h2>{{ account.account_number }} {{ account.account_name }}</h2></dt>
+      <dt><h2><a href="https://core.rackspace.com/py/core/#/account/{{ account.account_number }}">
+          {{ account.account_number }} {{ account.account_name }}</a></h2></dt>
       <dd>
-        <div><p class="item">Controller ID:</p> {{ account.controller_id }}</div>
+        <div><p class="item">Controller ID:</p> <a href="https://core.rackspace.com/py/core/#/device/{{ account.controller_id }}">
+            {{ account.controller_id }}</a></div>
         <div><p class="item">Controller IP:</p> {{ account.controller_ip }}</div>
         <div><p class="item">Admin Username:</p> {{ account.admin_user }}</div>
         <div><p class="item">Admin Password:</p> {{ account.admin_pass }}</div>
+        <!--
         <div><p class="item">Created:</p> {{ account.created_at }}</div>
         <div><p class="item">Updated:</p> {{ account.updated_at }}</div>
+        -->
         <div><p class="item">Notes:</p> {{ md.convert(account.notes)|safe }}</div>
       </dd>
     </dl>
